# forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: add.rs  dashboard.rs  fmt.rs  hooks.rs  ide.rs  lint.rs  main.rs  tree.rs  upgrade.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: cache.rs  config.rs  dag.rs  error.rs  executor.rs  lib.rs  plugins.rs  telemetry.rs
crates/forge-core/templates/: forge_java.toml  forge_kotlin.toml  forge_python.toml
crates/forge-deps/: Cargo.toml
crates/forge-deps/src/: lib.rs  maven.rs  pypi.rs
crates/forge-langs/: Cargo.toml
crates/forge-langs/src/: java.rs  kotlin.rs  lib.rs  python.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: main.rs
docs/: COMPARATIVA_GRADLE.md  QUICKSTART.md  implementation_plan.md  walkthrough.md
editors/vscode/: forge-0.1.0.vsix  forge-icon-theme.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
forge-dashboard/: README.md  metadata.json  vite.config.ts
forge-dashboard/src/: App.tsx  index.css  main.tsx
forge-dashboard/src/features/cache/: CacheTab.tsx
forge-dashboard/src/features/general/: GeneralTab.tsx
forge-dashboard/src/features/graph/: GraphTab.tsx
forge-dashboard/src/features/settings/: SettingsTab.tsx
forge-dashboard/src/shared/: icons.tsx
forge-dashboard/src/shared/components/: DagNode.tsx  DashboardCard.tsx  Header.tsx  Sidebar.tsx  StatBar.tsx
forge-dashboard/src/shared/context/: TelemetryContext.tsx
schemas/: forge.schema.json
test-project/: .gitignore
test-project/src/: main.py
tests/java_project/: forge.toml
tests/java_project/src/: Main.java
tests/kotlin_project/: forge.toml
tests/kotlin_project/src/: Main.kt
tests/multimodule_project/: forge.toml
tests/multimodule_project/api/: forge.toml
tests/multimodule_project/api/src/main/java/api/: Main.java
tests/multimodule_project/core/: forge.toml
tests/multimodule_project/core/src/main/java/core/: CoreService.java
tests/multimodule_project/database/: forge.toml
tests/multimodule_project/database/src/main/java/database/: DatabaseService.java
tests/python_project/: forge.toml
tests/python_project/src/: main.py
