[workspace]
members = [
    "crates/forge-cli",
    "crates/forge-core",
    "crates/forge-langs",
    "crates/forge-deps",
    "crates/forge-lsp",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["SkyShoot <enri312>"]
license = "MIT"
description = "🔥 FORGE — Build system de nueva generación"
homepage = "https://github.com/enri312/forge"
repository = "https://github.com/enri312/forge"
readme = "README.md"
keywords = ["build-tool", "cli", "java", "python", "kotlin"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[workspace.dependencies]
# Serialización y configuración
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP para descargar dependencias
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Hashing para caché incremental
sha2 = "0.10"

# Colores y UX en terminal
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Utilidades de sistema de archivos
walkdir = "2.5"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Manejo de errores
thiserror = "1.0"
anyhow = "1.0"

# XML parser (para POMs de Maven)
quick-xml = { version = "0.37", features = ["serialize"] }

# File watching (watch mode)
notify = { version = "7.0", features = ["macos_kqueue"] }
ctrlc = "3.4"

# Dependencias Internas (FORGE crates)
cyrce-forge-core = { version = "0.6.0", path = "crates/forge-core" }
cyrce-forge-deps = { version = "0.6.0", path = "crates/forge-deps" }
cyrce-forge-langs = { version = "0.6.0", path = "crates/forge-langs" }
cyrce-forge-lsp = { version = "0.6.0", path = "crates/forge-lsp" }

# Language Server Protocol (LSP)
tower-lsp = "0.20.0"

# WebAssembly Plugin System (Extism)
extism = "1.8.0"

# Servidor Web Embebido (Dashboard)
axum = "0.7"
rust-embed = "8.4"
mime_guess = "2.0"
