[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI del build system FORGE"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-langs = { path = "../forge-langs" }
forge-deps = { path = "../forge-deps" }

clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
colored.workspace = true
indicatif.workspace = true
console.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
