[package]
name = "cyrce-forge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI del build system FORGE"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
cyrce-forge-core = { version = "0.9.0", path = "../forge-core" }
cyrce-forge-langs = { version = "0.9.0", path = "../forge-langs" }
cyrce-forge-deps = { version = "0.9.0", path = "../forge-deps" }

clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
colored.workspace = true
indicatif.workspace = true
console.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
notify.workspace = true
ctrlc.workspace = true
walkdir.workspace = true
dirs.workspace = true

axum.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde_json.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
