[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Motor principal de FORGE: DAG, ejecutor paralelo y caché"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
sha2.workspace = true
walkdir.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
colored.workspace = true
indicatif.workspace = true
