[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Motor principal de FORGE: DAG, ejecutor paralelo y caché"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
sha2.workspace = true
walkdir.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
colored.workspace = true
indicatif.workspace = true
console.workspace = true

# HTTP & Compresión para Caché Distribuido
reqwest.workspace = true
tar = "0.4.40"
flate2 = "1.0.30"
