[package]
name = "forge-langs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Módulos de lenguaje para FORGE: Java, Kotlin, Python"

[dependencies]
forge-core = { path = "../forge-core" }

serde.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
colored.workspace = true
