[package]
name = "cyrce-forge-langs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Módulos de lenguaje para FORGE: Java, Kotlin, Python"

[dependencies]
cyrce-forge-core = { version = "0.9.0", path = "../forge-core" }

serde.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
colored.workspace = true
reqwest = { workspace = true, features = ["json"] }
dirs.workspace = true
