[package]
name = "cyrce-forge-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol (LSP) oficial para FORGE"

[dependencies]
# Dependencias internas de Forge
cyrce-forge-core = { version = "0.9.0", path = "../forge-core" }

# LSP Framework
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Utilidades
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
